sdk/v0.7.12/table.mdx
---
title: "Table"
icon: "square-c"
description: "<a href=\"https://github.com/pixeltable/pixeltable/blob/main/pixeltable/catalog/table.py#L34\" id=\"viewSource\" target=\"_blank\" rel=\"noopener noreferrer\"><img src=\"https://img.shields.io/badge/View%20Source%20on%20Github-blue?logo=github&labelColor=gray\" alt=\"View Source on GitHub\" style={{ display: 'inline', margin: '0px' }} noZoom /></a>"
noindex: true
---
# <span style={{ 'color': 'gray' }}>class</span>&nbsp; pixeltable.Table


A handle to a table, view, or snapshot. This class is the primary interface through which table operations
(queries, insertions, updates, etc.) are performed in Pixeltable.

Thread-safe.


## <span style={{ 'color': 'gray' }}>method</span>&nbsp; add_btree_index()

```python Signature
add_btree_index(
    column: str | ColumnRef,
    *,
    idx_name: str | None = None,
    if_exists: Literal['error', 'ignore'] = 'error'
) -> None
```

Add a B-tree index to the table. Once the index is created, it will be automatically kept up-to-date as new
rows are inserted into and existing rows are updated in the table.

A B-tree index accelerates equality and range comparisons (used in `where` clauses) and `order_by` on the
indexed column. Any non-boolean scalar column (`String`, `Int`, `Float`, `Timestamp`, `Date`) or non-computed
media column (`Image`, `Video`, `Audio`, `Document`) is supported; the index on a media column is over the
file URL. The column must be stored and, if a media column, must not be produced by a view iterator.

Only tables created with `has_default_idxs=False` (the default) accept explicit B-tree indexes. A table
created with `has_default_idxs=True` indexes its eligible columns automatically, and its B-tree indexes
cannot be managed separately from their respective columns.

**Parameters:**

- **`column`** (`str | ColumnRef`): The name of, or reference to, the column to be indexed; must be an indexable scalar or media
    column (see above).
- **`idx_name`** (`str | None`): An optional name for the index. If not specified, a unique name will be generated automatically.
    If specified, the name must be unique for this table and a valid pixeltable column name.
- **`if_exists`** (`Literal['error', 'ignore']`, default: `'error'`): Directive for handling an existing B-tree index on the same column, or an existing index with
    the same name. Must be one of `'error'`, `'ignore'`.

**Examples:**

Add an index to the `name` column of the table `my_table`:

```python
tbl = pxt.get_table('my_table')
tbl.add_btree_index('name')
```

The column may also be specified by reference, and the index may be given an explicit name:

```python
tbl.add_btree_index(tbl.name, idx_name='name_idx')
```


## <span style={{ 'color': 'gray' }}>method</span>&nbsp; add_column()

```python Signature
add_column(
    *,
    if_exists: Literal['error', 'ignore', 'replace', 'replace_force'] = 'error',
    **kwargs: TypeForm | ColumnSpec
) -> UpdateStatus
```

Adds an ordinary (non-computed) column to the table.


**Parameters:**

- **`kwargs`** (`TypeForm | ColumnSpec`): Exactly one keyword argument of the form `col_name=type` or `col_name=col_spec_dict`,
    where `col_spec_dict` is a [`ColumnSpec`](./columnspec) dict.
- **`if_exists`** (`Literal['error', 'ignore', 'replace', 'replace_force']`, default: `'error'`): Determines the behavior if the column already exists. Must be one of the following:
    - `'error'`: an exception will be raised.
    - `'ignore'`: do nothing and return.
    - `'replace'` or `'replace_force'`: drop the existing column and add the new column, if it has
        no dependents.

**Returns:**

- `UpdateStatus`: Information about the execution status of the operation.

**Examples:**

Add an int column:

```python
tbl.add_column(new_col=pxt.Int | None)
```

Add a column with column metadata using a dict:

```python
tbl.add_column(
    img_col={
        'type': pxt.Image | None,
        'stored': True,
        'media_validation': 'on_write',
    }
)
```

Alternatively, adding a column can also be expressed using `add_columns`:

```python
tbl.add_columns({'new_col': pxt.Int | None})
```

As well as with column metadata:

```python
tbl.add_columns(
    {
        'img_col': {
            'type': pxt.Image | None,
            'stored': True,
            'media_validation': 'on_write',
        }
    }
)
```


## <span style={{ 'color': 'gray' }}>method</span>&nbsp; add_columns()

```python Signature
add_columns(
    schema: Mapping[str, TypeForm | ColumnSpec],
    if_exists: Literal['error', 'ignore', 'replace', 'replace_force'] = 'error'
) -> UpdateStatus
```

Adds multiple columns to the table. The columns must be concrete (non-computed) columns; to add computed
columns, use [`add_computed_column()`](./table#method-add_computed_column) instead.

The format of the `schema` argument is a dict mapping column names to their types. A bare type such as
`pxt.Int` defines a non-nullable column; use `pxt.Int | None` to allow nulls. Note that a column added
to a table that already has rows must be nullable.

**Parameters:**

- **`schema`** (`Mapping[str, TypeForm | ColumnSpec]`): A dictionary mapping column names to a `type` or a [`ColumnSpec`](./columnspec) dict.
- **`if_exists`** (`Literal['error', 'ignore', 'replace', 'replace_force']`, default: `'error'`): Determines the behavior if a column already exists. Must be one of the following:
    - `'error'`: an exception will be raised.
    - `'ignore'`: do nothing and return.
    - `'replace' or 'replace_force'`: drop the existing column and add the new column, if it has no
        dependents.

    Note that the `if_exists` parameter is applied to all columns in the schema.
    To apply different behaviors to different columns, please use
    [`add_column()`](./table#method-add_column) for each column.

**Returns:**

- `UpdateStatus`: Information about the execution status of the operation.

**Examples:**

Add multiple columns to the table `my_table`:

```python
tbl = pxt.get_table('my_table')
schema = {'new_col_1': pxt.Int | None, 'new_col_2': pxt.String | None}
tbl.add_columns(schema)
```

It is also possible to specify column metadata using a dict:

```python
tbl = pxt.get_table('my_table')
schema = {
    'new_col_1': {
        'type': pxt.Image | None,
        'stored': True,
        'media_validation': 'on_write',
    },
    'new_col_2': pxt.String | None,
}
tbl.add_columns(schema)
```


## <span style={{ 'color': 'gray' }}>method</span>&nbsp; add_computed_column()

```python Signature
add_computed_column(
    *,
    stored: bool | None = None,
    destination: str | Path | None = None,
    custom_metadata: Any = None,
    comment: str = '',
    print_stats: bool = False,
    on_error: Literal['abort', 'ignore'] = 'abort',
    if_exists: Literal['error', 'ignore', 'replace'] = 'error',
    **kwargs: exprs.Expr
) -> UpdateStatus
```

Adds a computed column to the table.


**Parameters:**

- **`kwargs`** (`exprs.Expr`): Exactly one keyword argument of the form `col_name=expression`.
- **`stored`** (`bool | None`): Whether the column is materialized and stored or computed on demand.
- **`destination`** (`str | Path | None`): An object store reference for persisting computed files.
- **`custom_metadata`** (`Any`): Optional user-defined metadata to associate with the column. Must be a valid
    JSON-serializable object.
- **`comment`** (`str`, default: `''`): An optional comment; its meaning is user-defined.
- **`print_stats`** (`bool`, default: `False`): If `True`, print execution metrics during evaluation.
- **`on_error`** (`Literal['abort', 'ignore']`, default: `'abort'`): Determines the behavior if an error occurs while evaluating the column expression for at least one
    row.

    - `'abort'`: an exception will be raised and the column will not be added.
    - `'ignore'`: execution will continue and the column will be added. Any rows
        with errors will have a `None` value for the column, with information about the error stored in the
        corresponding `tbl.col_name.errormsg` and `tbl.col_name.errortype` fields.
- **`if_exists`** (`Literal['error', 'ignore', 'replace']`, default: `'error'`): Determines the behavior if the column already exists. Must be one of the following:
    - `'error'`: an exception will be raised.
    - `'ignore'`: do nothing and return.
    - `'replace' or 'replace_force'`: drop the existing column and add the new column, iff it has
        no dependents.

**Returns:**

- `UpdateStatus`: Information about the execution status of the operation.

**Examples:**

For a table with an image column `frame`, add an image column `rotated` that rotates the image by
90 degrees:

```python
tbl.add_computed_column(rotated=tbl.frame.rotate(90))
```

Do the same, but now the column is unstored:

```python
tbl.add_computed_column(rotated=tbl.frame.rotate(90), stored=False)
```


## <span style={{ 'color': 'gray' }}>method</span>&nbsp; add_embedding_index()

```python Signature
add_embedding_index(
    column: str | ColumnRef,
    *,
    idx_name: str | None = None,
    embedding: Function | None = None,
    string_embed: Function | None = None,
    image_embed: Function | None = None,
    audio_embed: Function | None = None,
    video_embed: Function | None = None,
    document_embed: Function | None = None,
    metric: Literal['cosine', 'ip', 'l2'] = 'cosine',
    precision: Literal['fp16', 'fp32'] = 'fp16',
    if_exists: Literal['error', 'ignore', 'replace', 'replace_force'] = 'error'
) -> None
```

Add an embedding index to the table. Once the index is created, it will be automatically kept up-to-date as new
rows are inserted into the table.

To add an embedding index, specify the column to be indexed and, if the column is not an `Array` column, an
embedding UDF. `String`, `Image`, `Audio`, `Video`, `Document`, and `Array` columns are currently supported.

Multimodal embeddings can be specified in one of two ways: via a single `embedding` argument with a
multi-signature UDF (one signature per modality), or via separate modality-specific arguments (`string_embed`,
`image_embed`, etc.). If both are provided, the modality-specific arguments will supersede the corresponding
signatures of the `embedding` UDF.

For `Array` columns, which are assumed to contain precomputed embeddings, an embedding function is optional;
if provided, it will be used to convert query values into embeddings for similarity search.

**Parameters:**

- **`column`** (`str | ColumnRef`): The name of, or reference to, the column to be indexed; must be a `String`, `Image`, `Audio`,
    `Video`, `Document`, or `Array` column.
- **`idx_name`** (`str | None`): An optional name for the index. If not specified, a unique name will be generated automatically.
    If specified, the name must be unique for this table and a valid pixeltable column name.
    When `idx_name` is omitted, duplicates are detected by the index definition (the embedding
    function(s), `metric`, and `precision`) on the column: re-adding an index with an identical
    definition is governed by `if_exists`.
- **`embedding`** (`Function | None`): The UDF to use for the embedding. Must be a UDF that accepts a single argument of type `String`
    or `Image` (as appropriate for the column being indexed) and returns a fixed-size 1-dimensional
    array of floats. If omitted, then at least one of the modality-specific `*_embed` arguments must be
    supplied.
- **`string_embed`** (`Function | None`): An optional UDF to use for the string embedding component of this index.
- **`image_embed`** (`Function | None`): An optional UDF to use for the image embedding component of this index.
- **`audio_embed`** (`Function | None`): An optional UDF to use for the audio embedding component of this index.
- **`video_embed`** (`Function | None`): An optional UDF to use for the video embedding component of this index.
- **`document_embed`** (`Function | None`): An optional UDF to use for the document embedding component of this index.
- **`metric`** (`Literal['cosine', 'ip', 'l2']`, default: `'cosine'`): Distance metric to use for the index; one of `'cosine'`, `'ip'`, or `'l2'`.
    The default is `'cosine'`.
- **`precision`** (`Literal['fp16', 'fp32']`, default: `'fp16'`): level of precision for the embeddings; one of `'fp16'` or `'fp32'`.
- **`if_exists`** (`Literal['error', 'ignore', 'replace', 'replace_force']`, default: `'error'`): Directive for handling an existing index. The existing index is the one with the same name
    (if `idx_name` is given), or one with an identical definition on the same column (if `idx_name` is
    omitted). Must be one of the following:

    - `'error'`: raise an error if such an index already exists.
    - `'ignore'`: do nothing if such an index already exists.
    - `'replace'` or `'replace_force'`: replace the existing index with the new one.

**Examples:**

Add an index to the `img` column of the table `my_table`:

```python
from pixeltable.functions.huggingface import clip

tbl = pxt.get_table('my_table')
embedding_fn = clip.using(model_id='openai/clip-vit-base-patch32')
tbl.add_embedding_index(tbl.img, embedding=embedding_fn)
```

Alternatively, the `img` column may be specified by name:

```python
tbl.add_embedding_index('img', embedding=embedding_fn)
```

Once the index is created, similarity lookups can be performed using the `similarity` pseudo-function:

```python
sim = tbl.img.similarity(
    image='/path/to/my-image.jpg'  # can also be a URL or a PIL image
)
tbl.select(tbl.img, sim).order_by(sim, asc=False).limit(5)
```

If the embedding UDF is a multimodal embedding (supporting more than one data type), then lookups may be
performed using any of its supported modalities. In our example, CLIP supports both text and images, so we
can also search for images using a text description:

```python
sim = tbl.img.similarity(string='a picture of a train')
tbl.select(tbl.img, sim).order_by(sim, asc=False).limit(5)
```

Audio and video lookups would look like this:

```python
sim = tbl.img.similarity(audio='/path/to/audio.flac')
sim = tbl.img.similarity(video='/path/to/video.mp4')
```

Multiple indexes can be defined on each column. Add a second index to the `img` column, using the inner
product as the distance metric, and with a specific name:

```python
tbl.add_embedding_index(
    tbl.img, idx_name='ip_idx', embedding=embedding_fn, metric='ip'
)
```

Add an index using separately specified string and image embeddings:

```python
tbl.add_embedding_index(
    tbl.img,
    string_embed=string_embedding_fn,
    image_embed=image_embedding_fn,
)
```


## <span style={{ 'color': 'gray' }}>method</span>&nbsp; alter_computed_column()

```python Signature
alter_computed_column(
    *,
    recompute: bool = True,
    cascade: bool = True,
    **kwargs: exprs.Expr
) -> UpdateStatus
```

Change the value expression of a computed column.

The new expression must have the same column type as the current one. It can reference any column of this
table or of one of its ancestors, as long as there are no dependency cycles.

Args:
    kwargs: Exactly one keyword argument of the form `col_name=expression`.
    recompute: If `True`, the stored values of the column are recomputed. If `False`, they remain those
        produced by the previous expression, and are stale until the column is recomputed with
        [`recompute_columns()`](./table#method-recompute_columns).
    cascade: If `True`, computed columns and views that transitively depend on this column are recomputed
        as well; if `False`, they retain their current values. Only applies if `recompute` is `True`.

Returns:
    An [`UpdateStatus`](./updatestatus) describing the recompute; rows that raise during
    evaluation are recorded as cell errors and counted in `num_excs`.

Raises:
    Error: If the column does not exist, is not a computed column, belongs to a base table, or if the new
    expression has a different column type or creates a dependency cycle.

Examples:
    Change a computed column to use a different scaling factor:

```python
tbl = pxt.create_table('my_table', {'n': pxt.Int})
tbl.add_computed_column(scaled=tbl.n * 2)
tbl.alter_computed_column(scaled=tbl.n * 3)
```

    Update the definition without recomputing the existing rows:

```python
tbl.alter_computed_column(scaled=tbl.n * 4, recompute=False)
```


## <span style={{ 'color': 'gray' }}>method</span>&nbsp; batch_update()

```python Signature
batch_update(
    rows: Iterable[dict[str, Any]],
    cascade: bool = True,
    if_not_exists: Literal['error', 'ignore', 'insert'] = 'error',
    return_rows: bool = False
) -> UpdateStatus
```

Update rows in this table.


**Parameters:**

- **`rows`** (`Iterable[dict[str, Any]]`): an Iterable of dictionaries containing values for the updated columns plus values for the primary key
    columns.
- **`cascade`** (`bool`, default: `True`): if True, also update all computed columns that transitively depend on the updated columns.
- **`if_not_exists`** (`Literal['error', 'ignore', 'insert']`, default: `'error'`): Specifies the behavior if a row to update does not exist:
    - `'error'`: Raise an error.
    - `'ignore'`: Skip the row silently.
    - `'insert'`: Insert the row.
- **`return_rows`** (`bool`, default: `False`): If `True`, populate `UpdateStatus.rows` with one dict per affected row, mapping column
    names to their new stored values. Rows newly inserted via `if_not_exists='insert'` are included.
    If `False` (default), `UpdateStatus.rows` is `None`.

**Examples:**

Update the `name` and `age` columns for the rows with ids 1 and 2 (assuming `id` is the primary key).
If either row does not exist, this raises an error:

```python
tbl.batch_update(
    [
        {'id': 1, 'name': 'Alice', 'age': 30},
        {'id': 2, 'name': 'Bob', 'age': 40},
    ]
)
```

Update the `name` and `age` columns for the row with `id` 1 (assuming `id` is the primary key) and insert
the row with new `id` 3 (assuming this key does not exist):

```python
tbl.batch_update(
    [
        {'id': 1, 'name': 'Alice', 'age': 30},
        {'id': 3, 'name': 'Bob', 'age': 40},
    ],
    if_not_exists='insert',
)
```


## <span style={{ 'color': 'gray' }}>method</span>&nbsp; collect()

```python Signature
collect() -> ResultSet
```

Return rows from this table.


## <span style={{ 'color': 'gray' }}>method</span>&nbsp; columns()

```python Signature
columns() -> list[str]
```

Return the names of the columns in this table.


## <span style={{ 'color': 'gray' }}>method</span>&nbsp; compute()

```python Signature
compute(
    source: Sequence[dict[str, Any]] | Sequence[pydantic.BaseModel],
    /,
    *,
    on_error: Literal['abort', 'ignore'] = 'abort'
) -> RowBatch
```

Materialize the computed columns of this table for the given input rows and return the resulting rows
without persisting them.

If this table is a view, the input rows are applied to the view's insertable base table (i.e., the root of the
view hierarchy) and the output rows are the resulting rows of the view, as if the input had been inserted into
the base:
- rows that don't satisfy the view's filter are dropped
- an iterator view can produce multiple output rows per input row

**Parameters:**

- **`source`** (`Sequence[dict[str, Any]] | Sequence[pydantic.BaseModel]`): Rows to compute, as a sequence of dictionaries or Pydantic model instances. Rows contain
    values for the base table's columns (for a view) or this table's columns; each row must supply
    values for every required (non-nullable, non-computed) column; the same rules as
    [`insert()`](./table#method-insert) apply.
- **`on_error`** (`Literal['abort', 'ignore']`, default: `'abort'`): Determines the behavior if an error occurs while evaluating a computed column or detecting an
    invalid media file (such as a corrupt image).

    - If `on_error='abort'`, an exception will be raised.
    - If `on_error='ignore'`, execution will continue and the (possibly partially) completed rows will be
        returned. Any cells with errors will have a `None` value for that cell, with information about the
        error recorded in the row's [`errors`](./row). A row whose view filter fails to
        evaluate is dropped.

**Returns:**

- `RowBatch`: A [`RowBatch`](./rowbatch) of output rows, in input row order (with an iterator's output
  rows in iteration order). Each [`Row`](./row) contains a value for every column of the
  table. [`Row.errors`](./row) holds `{'errortype': ..., 'errormsg': ...}` for each cell that raised,
  keyed by column or index name (only with `on_error='ignore'`).

**Examples:**

Compute output rows for a table with int columns `a`, `b` and a computed column `c = a + b`:

```python
tbl = pxt.get_table('my_table')
rows = tbl.compute([{'a': 1, 'b': 1}, {'a': 2, 'b': 2}])
# rows == [{'a': 1, 'b': 1, 'c': 2}, {'a': 2, 'b': 2, 'c': 4}]
```

Same with Pydantic model inputs:

```python
class MyModel(pydantic.BaseModel):
    a: int
    b: int


rows = tbl.compute([MyModel(a=1, b=2), MyModel(a=3, b=4)])
```

Continue past per-row failures and inspect the per-cell error info:

```python
rows = tbl.compute(
    [{'a': 0, 'b': 1}, {'a': 2, 'b': 2}], on_error='ignore'
)
# If `c` raised on row 0, rows[0]['c'] is None and rows[0].errors['c']
# contains {'errortype': ..., 'errormsg': ...}.
```

Compute view rows from base table input, for a view `my_view` defined over `my_table` with a
filter `a > 0`:

```python
v = pxt.get_table('my_view')
rows = v.compute([{'a': 0, 'b': 1}, {'a': 2, 'b': 2}])
# only the second input row satisfies the filter; rows contains its view row
```


## <span style={{ 'color': 'gray' }}>method</span>&nbsp; count()

```python Signature
count() -> int
```

Return the number of rows in this table.


## <span style={{ 'color': 'gray' }}>method</span>&nbsp; cursor()

```python Signature
cursor() -> ResultCursor
```

Return a [`ResultCursor`](./resultcursor) that iterates over this table's rows.

See [`ResultCursor`](./resultcursor) for usage examples and lifecycle details.


## <span style={{ 'color': 'gray' }}>method</span>&nbsp; delete()

```python Signature
delete(where: exprs.Expr | None = None) -> UpdateStatus
```

Delete rows in this table.


**Parameters:**

- **`where`** (`'exprs.Expr' | None`): a predicate to filter rows to delete.

**Examples:**

Delete all rows in a table:

```python
tbl.delete()
```

Delete all rows in a table where column `a` is greater than 5:

```python
tbl.delete(tbl.a > 5)
```


## <span style={{ 'color': 'gray' }}>method</span>&nbsp; describe()

```python Signature
describe() -> None
```

Print the table schema.


## <span style={{ 'color': 'gray' }}>method</span>&nbsp; distinct()

```python Signature
distinct() -> Query
```

Remove duplicate rows from table.


## <span style={{ 'color': 'gray' }}>method</span>&nbsp; drop_column()

```python Signature
drop_column(
    column: str | ColumnRef,
    if_not_exists: Literal['error', 'ignore'] = 'error'
) -> None
```

Drop a column from the table.


**Parameters:**

- **`column`** (`str | ColumnRef`): The name or reference of the column to drop.
- **`if_not_exists`** (`Literal['error', 'ignore']`, default: `'error'`): Directive for handling a non-existent column. Must be one of the following:
    - `'error'`: raise an error if the column does not exist.
    - `'ignore'`: do nothing if the column does not exist.

**Examples:**

Drop the column `col` from the table `my_table` by column name:

```python
tbl = pxt.get_table('my_table')
tbl.drop_column('col')
```

Drop the column `col` from the table `my_table` by column reference:

```python
tbl = pxt.get_table('my_table')
tbl.drop_column(tbl.col)
```

Drop the column `col` from the table `my_table` if it exists, otherwise do nothing:

```python
tbl = pxt.get_table('my_table')
tbl.drop_col(tbl.col, if_not_exists='ignore')
```


## <span style={{ 'color': 'gray' }}>method</span>&nbsp; drop_embedding_index()

```python Signature
drop_embedding_index(
    *,
    column: str | ColumnRef | None = None,
    idx_name: str | None = None,
    if_not_exists: Literal['error', 'ignore'] = 'error'
) -> None
```

Drop an embedding index from the table. Either a column name or an index name (but not both) must be
specified. If a column name or reference is specified, it must be a column containing exactly one
embedding index; otherwise the specific index name must be provided instead.

**Parameters:**

- **`column`** (`str | ColumnRef | None`): The name of, or reference to, the column from which to drop the index.
    The column must have only one embedding index.
- **`idx_name`** (`str | None`): The name of the index to drop.
- **`if_not_exists`** (`Literal['error', 'ignore']`, default: `'error'`): Directive for handling a non-existent index. Must be one of the following:
    - `'error'`: raise an error if the index does not exist.
    - `'ignore'`: do nothing if the index does not exist.

    Note that `if_not_exists` parameter is only applicable when an `idx_name` is specified
    and it does not exist, or when `column` is specified and it has no index.
    `if_not_exists` does not apply to non-exisitng column.

**Examples:**

Drop the embedding index on the `img` column of the table `my_table` by column name:

```python
tbl = pxt.get_table('my_table')
tbl.drop_embedding_index(column='img')
```

Drop the embedding index on the `img` column of the table `my_table` by column reference:

```python
tbl = pxt.get_table('my_table')
tbl.drop_embedding_index(column=tbl.img)
```

Drop the embedding index `idx1` of the table `my_table` by index name:
```python
tbl = pxt.get_table('my_table')
tbl.drop_embedding_index(idx_name='idx1')
```

Drop the embedding index `idx1` of the table `my_table` by index name, if it exists, otherwise do nothing:
```python
tbl = pxt.get_table('my_table')
tbl.drop_embedding_index(idx_name='idx1', if_not_exists='ignore')
```


## <span style={{ 'color': 'gray' }}>method</span>&nbsp; drop_index()

```python Signature
drop_index(
    *,
    column: str | ColumnRef | None = None,
    idx_name: str | None = None,
    if_not_exists: Literal['error', 'ignore'] = 'error'
) -> None
```

Drop an index from the table. Either a column name or an index name (but not both) must be
specified. If a column name or reference is specified, it must be a column containing exactly one index;
otherwise the specific index name must be provided instead.

The B-tree indexes of a table created with `has_default_idxs=True` cannot be dropped: they are managed
automatically, together with the columns they index.

**Parameters:**

- **`column`** (`str | ColumnRef | None`): The name of, or reference to, the column from which to drop the index.
    The column must have only one embedding index.
- **`idx_name`** (`str | None`): The name of the index to drop.
- **`if_not_exists`** (`Literal['error', 'ignore']`, default: `'error'`): Directive for handling a non-existent index. Must be one of the following:
    - `'error'`: raise an error if the index does not exist.
    - `'ignore'`: do nothing if the index does not exist.

    Note that `if_not_exists` parameter is only applicable when an `idx_name` is specified
    and it does not exist, or when `column` is specified and it has no index.
    `if_not_exists` does not apply to non-exisitng column.

**Examples:**

Drop the index on the `img` column of the table `my_table` by column name:

```python
tbl = pxt.get_table('my_table')
tbl.drop_index(column_name='img')
```

Drop the index on the `img` column of the table `my_table` by column reference:

```python
tbl = pxt.get_table('my_table')
tbl.drop_index(tbl.img)
```

Drop the index `idx1` of the table `my_table` by index name:
```python
tbl = pxt.get_table('my_table')
tbl.drop_index(idx_name='idx1')
```

Drop the index `idx1` of the table `my_table` by index name, if it exists, otherwise do nothing:
```python
tbl = pxt.get_table('my_table')
tbl.drop_index(idx_name='idx1', if_not_exists='ignore')
```


## <span style={{ 'color': 'gray' }}>method</span>&nbsp; get_metadata()

```python Signature
get_metadata() -> TableMetadata
```

Retrieves metadata associated with this table.


**Returns:**

- `'TableMetadata'`: A [TableMetadata](./tablemetadata) instance containing this table's metadata.


## <span style={{ 'color': 'gray' }}>method</span>&nbsp; get_versions()

```python Signature
get_versions(n: int | None = None) -> list[VersionMetadata]
```

Returns information about versions of this table, most recent first.

`get_versions()` is intended for programmatic access to version metadata; for human-readable
output, use [`history()`](./table#method-history) instead.

**Parameters:**

- **`n`** (`int | None`): if specified, will return at most `n` versions

**Returns:**

- `list[VersionMetadata]`: A list of [VersionMetadata](./versionmetadata) dictionaries, one per version retrieved, most
  recent first.

**Examples:**

Retrieve metadata about all versions of the table `tbl`:

```python
tbl.get_versions()
```

Retrieve metadata about the most recent 5 versions of the table `tbl`:

```python
tbl.get_versions(n=5)
```


## <span style={{ 'color': 'gray' }}>method</span>&nbsp; group_by()

```python Signatures
# Signature 1:
group_by(grouping_tbl: Table, /) -> Query

# Signature 2:
group_by(*grouping_items: exprs.Expr) -> Query
```

Group the rows of this table based on the expression.

See [`Query.group_by`](./query#method-group_by) for more details.


## <span style={{ 'color': 'gray' }}>method</span>&nbsp; head()

```python Signature
head(n: int = 10) -> ResultSet
```

Return the first n rows inserted into this table.


## <span style={{ 'color': 'gray' }}>method</span>&nbsp; history()

```python Signature
history(n: int | None = None) -> pd.DataFrame
```

Returns a human-readable report about versions of this table.

`history()` is intended for human-readable output of version metadata; for programmatic access,
use [`get_versions()`](./table#method-get_versions) instead.

**Parameters:**

- **`n`** (`int | None`): if specified, will return at most `n` versions

**Returns:**

- `pd.DataFrame`: A report with information about each version, one per row, most recent first.

**Examples:**

Report all versions of the table:

```python
tbl.history()
```

Report only the most recent 5 changes to the table:

```python
tbl.history(n=5)
```


## <span style={{ 'color': 'gray' }}>method</span>&nbsp; insert()

```python Signatures
# Signature 1:
insert(
    source: TableDataSource,
    /,
    *,
    source_format: Literal['csv', 'excel', 'parquet', 'json'] | None = None,
    schema_overrides: dict[str, ts.ColumnType] | None = None,
    on_error: Literal['abort', 'ignore'] = 'abort',
    print_stats: bool = False,
    return_rows: bool = False,
    **kwargs: Any
) -> UpdateStatus

# Signature 2:
insert(
    *,
    on_error: Literal['abort', 'ignore'] = 'abort',
    print_stats: bool = False,
    return_rows: bool = False,
    **kwargs: Any
) -> UpdateStatus
```

Inserts rows into this table.

You can insert rows directly by providing a list of dictionaries as the `source`.

```python
tbl.insert([{'col1': 1, 'col2': 'egg'}, {'col1': 2, 'col2': 'fish'}])
```

You can also insert data from any recognized data source by providing a file path or URL.

```python
tbl.insert('path/to/file.csv')
tbl.insert('https://example.com/data.xlsx')
tbl.insert('s3://my-bucket/data.parquet')
```

Pixeltable will attempt to infer the format of the source data, unless the optional `source_format`
parameter is specified. Pixeltable will also attempt to infer the schema of the source data; you can
override the inferred schema by providing a `schema_overrides` dictionary (which may include all
columns or just a subset of columns).

The `source` can also be another table or a [`Query`](./query):

```python
tbl.insert(
    other_tbl.select(
        col1=other_tbl.other_col, col2=other_tbl.yet_another_col
    )
)
```

For inserting just a single row, there is a convenient shorthand key/value syntax:

```python
tbl.insert(col1=1, col2='egg')
```

**Parameters:**

- **`source`** (`TableDataSource | None`): A data source from which data can be imported. Can be any of the following:
    - A list of dictionaries
    - A list of Pydantic model instances
    - A file path or URI of a recognized data source
    - A Pandas `DataFrame`
    - Another Pixeltable table or a `Query`
    - A Hugging Face dataset
- **`kwargs`** (`Any`): (if inserting a single row) Keyword-argument pairs representing column names and values.
    (if inserting multiple rows) Additional keyword arguments are passed to the data source.
- **`source_format`** (`Literal['csv', 'excel', 'parquet', 'json'] | None`): A hint about the format of the source data. If not specified, Pixeltable will attempt
    to infer the format.
- **`schema_overrides`** (`dict[str, ts.ColumnType] | None`): If specified, then columns in `schema_overrides` will be given the specified types.
    Any columns not included in `schema_overrides` will have their types inferred as usual.
- **`on_error`** (`Literal['abort', 'ignore']`, default: `'abort'`): Determines the behavior if an error occurs while evaluating a computed column or detecting an
    invalid media file (such as a corrupt image) for one of the inserted rows.

    - If `on_error='abort'`, then an exception will be raised and the rows will not be inserted.
    - If `on_error='ignore'`, then execution will continue and the rows will be inserted. Any cells
        with errors will have a `None` value for that cell, with information about the error stored in the
        corresponding `tbl.col_name.errortype` and `tbl.col_name.errormsg` fields.
- **`print_stats`** (`bool`, default: `False`): If `True`, print statistics about the cost of computed columns.
- **`return_rows`** (`bool`, default: `False`): If `True`, populate `UpdateStatus.rows` with one dict per inserted row, mapping column names
    to their stored or computed values. If `False` (default), `UpdateStatus.rows` is `None`.

**Returns:**

- `UpdateStatus`: An [`UpdateStatus`](./updatestatus) object containing information about the update.

**Examples:**

Insert two rows into the table `my_table` with three int columns `a`, `b`, and `c`.
Column `c` is nullable:

```python
tbl = pxt.get_table('my_table')
tbl.insert([{'a': 1, 'b': 1, 'c': 1}, {'a': 2, 'b': 2}])
```

Insert a single row using the alternative syntax:

```python
tbl.insert(a=3, b=3, c=3)
```

Insert rows from a CSV file:

```python
tbl.insert('path/to/file.csv')
```

Insert Pydantic model instances into a table with two `pxt.Int` columns `a` and `b`:

```python
class MyModel(pydantic.BaseModel):
    a: int
    b: int


models = [MyModel(a=1, b=2), MyModel(a=3, b=4)]
tbl.insert(models)
```


## <span style={{ 'color': 'gray' }}>method</span>&nbsp; join()

```python Signature
join(
    other: Table,
    *,
    on: exprs.Expr | None = None,
    how: JoinType.LiteralType = 'inner'
) -> Query
```

Join this table with another table.


## <span style={{ 'color': 'gray' }}>method</span>&nbsp; limit()

```python Signature
limit(n: int, offset: int | None = None) -> Query
```

Select a limited number of rows from the Table, optionally skipping rows for pagination.


**Parameters:**

- **`n`** (`int`): Number of rows to select.
- **`offset`** (`int | None`): Number of rows to skip before returning results. Default is None (no offset).

**Returns:**

- `'Query'`: A Query with the specified limited rows.

**Examples:**

Get the first 10 rows:

```python
t.limit(10).collect()
```

Get rows 21-30 (skip first 20, return next 10):

```python
t.limit(10, offset=20).collect()
```


## <span style={{ 'color': 'gray' }}>method</span>&nbsp; list_views()

```python Signature
list_views(*, recursive: bool = True) -> list[str]
```

Returns a list of all views and snapshots of this `Table`.


**Parameters:**

- **`recursive`** (`bool`, default: `True`): If `False`, returns only the immediate successor views of this `Table`. If `True`, returns
    all sub-views (including views of views, etc.)

**Returns:**

- `list[str]`: A list of view paths.


## <span style={{ 'color': 'gray' }}>method</span>&nbsp; order_by()

```python Signature
order_by(*items: exprs.Expr, asc: bool = True) -> Query
```

Order the rows of this table based on the expression.

See [`Query.order_by`](./query#method-order_by) for more details.


## <span style={{ 'color': 'gray' }}>method</span>&nbsp; recompute_columns()

```python Signature
recompute_columns(
    *columns: str | ColumnRef,
    where: exprs.Expr | None = None,
    errors_only: bool = False,
    cascade: bool = True
) -> UpdateStatus
```

Recompute the values in one or more computed columns of this table.


**Parameters:**

- **`columns`** (`str | ColumnRef`): The names or references of the computed columns to recompute.
- **`where`** (`'exprs.Expr' | None`): A predicate to filter rows to recompute.
- **`errors_only`** (`bool`, default: `False`): If True, only run the recomputation for rows that have errors in the column (ie, the column's
    `errortype` property indicates that an error occurred). Only allowed for recomputing a single column.
- **`cascade`** (`bool`, default: `True`): if True, also update all computed columns that transitively depend on the recomputed columns.

**Examples:**

Recompute computed columns `c1` and `c2` for all rows in this table, and everything that transitively
depends on them:

```python
tbl.recompute_columns('c1', 'c2')
```

Recompute computed column `c1` for all rows in this table, but don't recompute other columns that depend on
it:

```python
tbl.recompute_columns(tbl.c1, tbl.c2, cascade=False)
```

Recompute column `c1` and its dependents, but only for rows with `c2` == 0:

```python
tbl.recompute_columns('c1', where=tbl.c2 == 0)
```

Recompute column `c1` and its dependents, but only for rows that have errors in it:

```python
tbl.recompute_columns('c1', errors_only=True)
```


## <span style={{ 'color': 'gray' }}>method</span>&nbsp; rename_column()

```python Signature
rename_column(old_name: str, new_name: str) -> None
```

Rename a column.


**Parameters:**

- **`old_name`** (`str`): The current name of the column.
- **`new_name`** (`str`): The new name of the column.

**Examples:**

Rename the column `col1` to `col2` of the table `my_table`:

```python
tbl = pxt.get_table('my_table')
tbl.rename_column('col1', 'col2')
```


## <span style={{ 'color': 'gray' }}>method</span>&nbsp; revert()

```python Signature
revert() -> None
```

Reverts the table to the previous version.

.. warning::
    This operation is irreversible.


## <span style={{ 'color': 'gray' }}>method</span>&nbsp; sample()

```python Signature
sample(
    n: int | None = None,
    n_per_stratum: int | None = None,
    fraction: float | None = None,
    seed: int | None = None,
    stratify_by: Any = None
) -> Query
```

Choose a shuffled sample of rows

See [`Query.sample`](./query#method-sample) for more details.


## <span style={{ 'color': 'gray' }}>method</span>&nbsp; select()

```python Signature
select(*items: Any, **named_items: Any) -> Query
```

Select columns or expressions from this table.

See [`Query.select`](./query#method-select) for more details.


## <span style={{ 'color': 'gray' }}>method</span>&nbsp; show()

```python Signature
show(n: int = 20) -> ResultSet
```

Return the first n rows from this table.


## <span style={{ 'color': 'gray' }}>method</span>&nbsp; tail()

```python Signature
tail(n: int = 10) -> ResultSet
```

Return the last n rows inserted into this table.


## <span style={{ 'color': 'gray' }}>method</span>&nbsp; update()

```python Signature
update(
    value_spec: dict[str, Any],
    where: exprs.Expr | None = None,
    cascade: bool = True,
    return_rows: bool = False
) -> UpdateStatus
```

Update rows in this table.


**Parameters:**

- **`value_spec`** (`dict[str, Any]`): a dictionary mapping column names to literal values or Pixeltable expressions.
- **`where`** (`'exprs.Expr' | None`): a predicate to filter rows to update.
- **`cascade`** (`bool`, default: `True`): if True, also update all computed columns that transitively depend on the updated columns.
- **`return_rows`** (`bool`, default: `False`): If `True`, populate `UpdateStatus.rows` with one dict per updated row, mapping column
    names to their new stored values.  If `False` (default), `UpdateStatus.rows` is `None`.

**Returns:**

- `UpdateStatus`: An [`UpdateStatus`](./updatestatus) object containing information about the update.

**Examples:**

Set column `int_col` to 1 for all rows:

```python
tbl.update({'int_col': 1})
```

Set column `int_col` to 1 for all rows where `int_col` is 0:

```python
tbl.update({'int_col': 1}, where=tbl.int_col == 0)
```

Set `int_col` to the value of `other_int_col` + 1:

```python
tbl.update({'int_col': tbl.other_int_col + 1})
```

Increment `int_col` by 1 for all rows where `int_col` is 0:

```python
tbl.update({'int_col': tbl.int_col + 1}, where=tbl.int_col == 0)
```


## <span style={{ 'color': 'gray' }}>method</span>&nbsp; where()

```python Signature
where(pred: exprs.Expr) -> Query
```

Filter rows from this table based on the expression.

See [`Query.where`](./query#method-where) for more details.

